--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,13 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_licenses"
-        android:orderInCategory="1"
-        android:title="@string/licenses_label"
-        app:showAsAction="never"/>
-    <item
-        android:id="@+id/action_logout"
-        android:orderInCategory="2"
-        android:title="@string/action_logout"
+        android:id="@+id/action_settings"
+        android:orderInCategory="100"
+        android:title="@string/action_settings"
         app:showAsAction="never"/>
 </menu>
